# GlosSI

./: .appveyor.yml  .gitignore  .gitmodules  7z_package.bat  7z_package_x64.bat  BUILDING.md  Build_Install.md  CONTRIBUTING.md  GloSC.sln  GloSC_install_script.iss  GloSC_install_script_x64.iss  GlosSI.sln  License.txt  QT_License  Readme.md  THIRD_PARTY_LICENSES.txt  TargetConfig.ini  ViGEm_BuildConfig.patch  _config.qml  _config.yml  appveyor.yml  build.ps1  buildSFML.bat  buildSFML.ps1  buildSFML.sh  buildViGEmClient.bat  buildViGEmClient.ps1  bundle-zip.ps1  docker-compose.yml  download_release_deps.ps1  glosc.code-workspace  glossi.code-workspace  index.html  params.json  prebuild.ps1  tail_config_logs.ps1  tail_target_logs.ps1  traypp_unicode.patch  version_appveyor.ps1  version_help.ps1
.github/: FUNDING.yml
CEFInjectLib/: CEFInject.cpp  CEFInject.h  CEFInjectLib.vcxproj  CEFInjectLib.vcxproj.filters
GlosSITarget/: .clang-format  AppLauncher.cpp  AppLauncher.h  CMakeLists.txt  CommonHttpEndpoints.h  DllInjector.h  GlosSITarget.vcxproj  GlosSITarget.vcxproj.filters  GlosSI_logo.h  HidHide.cpp  HidHide.h  HttpServer.cpp  HttpServer.h  InputRedirector.cpp  InputRedirector.h  Overlay.cpp  Overlay.h  OverlayDetector.cpp  OverlayDetector.h  OverlayLogSink.h  ProcessPriority.h  Resource.rc  Roboto.h  Settings.h  SteamOverlayDetector.cpp  SteamOverlayDetector.h  SteamTarget.cpp  SteamTarget.h  TargetWindow.cpp  TargetWindow.h  UWPOverlayEnabler.h  UnhookUtil.cpp  UnhookUtil.h  example_conf.json  imconfig.h  imgui.ini  main.cpp  resource.h  steam_sf_keymap.h  util.h
(+339 files in other folders)
